syntax = "proto3";

package dialog;

import "annotations.proto";
import "empty.proto";
import "definitions.proto";
import "peers.proto";
import "scalapb.proto";

option go_package = "dialog";
option java_package = "im.dlg.grpc.services";

// Block User
message RequestBlockUser {
    option (scalapb.message).extends = "im.dlg.grpc.GrpcRequest";
    UserOutPeer peer = 1;
}

// Unblock User
message RequestUnblockUser {
    option (scalapb.message).extends = "im.dlg.grpc.GrpcRequest";
    UserOutPeer peer = 1;
}

// Load Blocked Users
message RequestLoadBlockedUsers {
    option (scalapb.message).extends = "im.dlg.grpc.GrpcRequest";
    option (scalapb.message).extends = "im.dlg.grpc.GrpcResponse";
}

message ResponseLoadBlockedUsers {
    option (scalapb.message).extends = "im.dlg.grpc.GrpcResponse";
    repeated UserOutPeer user_peers = 1;
}

// Update about User Blocked
message UpdateUserBlocked {
    string user_id = 1;
}

// Update about User Unblocked
message UpdateUserUnblocked {
    string user_id = 1;
}

service Privacy {
    rpc BlockUser (RequestBlockUser) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            post: "/v1/grpc/Privacy/BlockUser"
            body: "*"
        };
    }
    rpc UnblockUser (RequestUnblockUser) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            post: "/v1/grpc/Privacy/UnblockUser"
            body: "*"
        };
    }
    rpc LoadBlockedUsers (RequestLoadBlockedUsers) returns (ResponseLoadBlockedUsers) {
        option (google.api.http) = {
            post: "/v1/grpc/Privacy/LoadBlockedUsers"
            body: "*"
        };
    }
}
